[gd_scene load_steps=2 format=3 uid="uid://di1h5a35sydd8"]

[ext_resource type="Script" uid="uid://bnhjm51ylvyah" path="res://end_screen.gd" id="1_1gwaw"]

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1gwaw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 640.0
offset_top = 256.0
offset_right = -1142.2303
offset_bottom = -686.23035
grow_horizontal = 2
scale = Vector2(4.1808925, 4.1808925)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Time" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Time: 00:00:000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="ReplayButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Replay"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"
